[package]
name = "pomodoro"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
description = "Implementation of a pomodoro timer using async, minimal utilities"
edition = "2018"
homepage = "https://github.com/notgull/pomodoro#readme"
repository = "https://github.com/notgull/pomodoro"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.38"
approx = "0.4.0"
breadx = { version = "0.2.3", features = ["async"] }
cpal = "0.13.1"
easy-parallel = "3.1.0"
futures-lite = "1.11.3"
rusttype = "0.9.2"
smol = "1.2.5"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
